--- a/hugo.toml
+++ b/hugo.toml
@@ -60,6 +60,7 @@ id = "UA-00000000-0"
 
 [languages]
 [languages.en]
+contentDir = "content/en"
 languageName ="English"
 # Weight used for sorting.
 weight = 1
@@ -172,6 +173,14 @@ no = 'Sorry to hear that. Please <a href="https://github.com/sergejey/majordomo-
 # add "hide_readingtime: true" to the page's front matter
 [params.ui.readingtime]
 enable = false
+
+[params.plantuml]
+enable = true
+theme = "default"
+svg = true
+
+[params.markmap]
+enable = true
 
 [params.links]
 # End user relevant links. These will show up on left side of footer and in the community page if you have one.
