--- a/hugo.toml
+++ b/hugo.toml
@@ -182,6 +182,9 @@ svg = true
 [params.markmap]
 enable = true
 
+[params.mermaid]
+enable = true
+
 [params.links]
 # End user relevant links. These will show up on left side of footer and in the community page if you have one.
 #[[params.links.user]]
